Add order producer

--- a/order-service/src/main/resources/application.yaml
+++ b/order-service/src/main/resources/application.yaml
@@ -11,7 +11,4 @@ spring:
     exchange:
       name: order-exchange
     routing-key:
-      stock:
-        name: stock-routing-key
-      email:
-        name: email-routing-key
+        name: order-routing-key
