Dockerize the project

--- a/email-service/src/main/resources/application.yaml
+++ b/email-service/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: email-service
   rabbitmq:
-    host: localhost
+    host: rabbit-mq
     queue:
       order-email:
         name: order-email
