--- a/order-service/src/main/resources/application.yaml
+++ b/order-service/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: order-service
   rabbitmq:
-    host: localhost
+    host: rabbit-mq
     queue:
       order-stock:
         name: order-stock
